--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO remove all default tag styles */
 body {
   font-family: Arial, Helvetica, sans-serif;
 }
